# ITP-gAI

./: .env.sample  .gitignore  LICENSE  README.md  base_model.py  category_rank.py  cwe_dict_clean.json  cwe_view_mapping.json  extract.py  filelist.txt  main.py  output_base_1.json  output_base_2.json  output_engine_1.json  output_engine_2.json  pyproject.toml  test_comparison.py
chroma_db/ea619380-7e85-410a-8411-0a20e0f3cb4f/: index_metadata.pickle
data/: process_categories.json
utils/: business_process_parse.py
